--- a/sculptor/css/sub.css
+++ b/sculptor/css/sub.css
@@ -2307,15 +2307,28 @@ body {
     }
     
 }
-@media all and (max-width:414px) {
-    .contents > img {
-        width: 240px;
-    }
-}
 @media all and (max-width:390px) {
     .modal-content {
         width: 280px;
         height: 450px;
+    }
+    .contents > h2 {
+        font-size: 1.7rem;
+    }
+    .contents > p {
+        font-size: 0.9rem;
+    }
+    .contents > img {
+        width: 250px;
+    }
+    .close {
+        font-size: 2.5rem;
+    }
+    .closebutton > p {
+        font-size: 1.3rem;
+    }
+    .check > p {
+        font-size: 1.3rem;
     }
     #vertical-txt1, #vertical-txt2, #vertical-txt3, #vertical-txt4 {
         font-size: 1rem;
