--- a/ascis/css/sub.css
+++ b/ascis/css/sub.css
@@ -102,7 +102,7 @@ body {
 #sns > ul {
     display: flex;
 }
-#sns span {
+#sns > ul > li > span {
     display: none;
 }
 #sns > ul > li:nth-child(1) {
@@ -145,14 +145,14 @@ body {
     display: flex;
     align-items: center;
 }
-#nav-btn span {
+#nav-btn > a > span {
     transform: rotate(180deg);
     width: 70%;
     color: #0d3273;
     font-size: 1.3rem;
     font-weight: 500;
 }
-#nav-btn img {
+#nav-btn > a > img {
     display: block;
     width: 35px;
     height: 35px;
