--- a/ascis/css/style.css
+++ b/ascis/css/style.css
@@ -101,7 +101,7 @@ body {
 #sns > ul {
     display: flex;
 }
-#sns > ul > li > span {
+#sns span {
     display: none;
 }
 #sns > ul > li:nth-child(1) {
@@ -144,14 +144,14 @@ body {
     display: flex;
     align-items: center;
 }
-#nav-btn > a > span {
+#nav-btn span {
     transform: rotate(180deg);
     width: 70%;
     color: #0d3273;
     font-size: 1.3rem;
     font-weight: 500;
 }
-#nav-btn > a > img {
+#nav-btn img {
     display: block;
     width: 35px;
     height: 35px;
@@ -235,13 +235,13 @@ body {
 .banner2-products > li {
     margin-right: 40px;
 }
-.product > a > img {
+.product img {
     display: block;
     width: 230px;
     height: auto;
     padding-bottom: 10px;
 }
-.product > a > span {
+.product span {
     text-align: center;
     font-size: 1rem;
     line-height: 25px;
@@ -704,6 +704,7 @@ body {
 .button-wrap > button {
     margin-right: 20px;
     cursor: pointer;
+    box-shadow: 3px 3px 4px rgba(0,0,0,0.5);
 }
 .circle1 {
     width: 50px; height: 50px;
