--- a/ascis/css/sub.css
+++ b/ascis/css/sub.css
@@ -159,3 +159,773 @@ body {
     margin-left: 10px;
     margin-right: 30px;
 }
+/* 아식스 x 발라홀릭 */
+#ballaholic {
+    width: 100%;
+    height: 900px;
+    background: url("../images/ballaholic-bg.png") no-repeat center;
+    background-size: cover;
+}
+#ballaholic-element {
+    width: 100%;
+    height: 800px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+}
+#ball-shoes {
+    position: absolute;
+    top: -5px;
+    animation: moveUpDown 2s linear infinite;
+}
+@keyframes moveUpDown {
+    0% {
+      top: -5px; /* 시작 위치 */
+    }
+    50% {
+      top: 40px; /* 중간 위치 */
+    }
+    100% {
+      top: -5px; /* 시작 위치로 돌아옴 */
+    }
+}
+#ball-logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20%;
+}
+#ball-logo > div {
+    padding: 20px;
+}
+#ball-logo > span {
+    width: 60px;
+    height: 5px;
+    background-color: #fff;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+#ball-model {
+    padding-top: 30px;
+    opacity: 0; 
+    transition: opacity 1s ease-in-out; 
+}
+.hidden {
+    visibility: hidden;
+}
+#more-btn1 {
+    position: absolute;
+    bottom: 28%;
+    right: 2%;
+    font-size: 1.4rem;
+    cursor: pointer;
+}
+#more-btn1 > a {
+    color: #000;
+}
+#ballaholic-explain {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+}
+.ballaholic-title {
+    padding-left: 50px;
+}
+#ballaholic-title > h2 {
+    margin-left: 40px;
+    position: relative;
+    font-family: "Noto Serif KR", serif;
+    font-weight: 900;
+    font-style: normal;
+    color: #fff;
+    font-size: 3.8rem;
+    -webkit-text-stroke: 1px rgba(0, 0, 0, 0.5);
+    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.3);
+}
+.fill {
+    cursor: pointer;
+    display: inline-block;
+    line-height: 1.2;
+    color: transparent; 
+    -webkit-text-fill-color: transparent; /* Webkit 브라우저 지원 */
+    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.1);
+    background-clip: text;
+    -webkit-background-clip: text;
+    /* background-repeat: no-repeat; */
+    transition: all 1.5s linear; /* 배경 위치에 대한 트랜지션 설정 */
+    background-image: linear-gradient(0deg, #0d3273 0% ,#0d3273 40%, transparent 40.1%);
+    background-position: 0% 100%;
+    background-size: 0% 100%;
+}
+.fill.animate{
+    background-size: 100% 200%;
+}
+#explain-content {
+    padding-top: 20px;
+    height: 50px;
+    display: flex;
+    white-space: nowrap;
+}
+#explain-content > div {
+    width: 270px;
+}
+.line2 {
+    display: block;
+    width: 0;
+    height: 3px;
+    background-color: #000;
+    margin-top: 15px;
+    transition: all 2s ease-in-out;
+}
+.line2.line-animation2{
+    width: 250px;
+}
+#explain-content > p {
+    font-size: 1.5rem;
+    line-height: 30px;
+}
+/* 아식스 x 할스튜디오스 */
+#halstudios {
+    margin-top: 100px;
+    background: url("../images/halstudios-bg.png") no-repeat center;
+    background-size: cover;
+    height: 1100px;
+    display: flex;
+    position: relative;
+    overflow: hidden;
+}
+#hal-shoes1 {
+    width: 50%;
+    padding-left: 7%;
+    padding-top: 30px;
+}
+@keyframes slideInFromTop {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+.slide-animation {
+    animation: slideInFromTop 1s ease forwards;
+}
+
+#halstudios-title {
+    display: flex;
+    flex-direction: column;
+    position: absolute; 
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+}
+#hal-asics-logo {
+    width: 900px;
+    display: flex;
+    align-items: center;
+}
+#hal-asics-logo > span {
+    display:inline-block;
+    width: 5px;
+    height: 70px;
+    background-color: #f5f2e8;
+    margin: 5px;
+}
+.hal-logo {
+    margin-left: 10px;
+}
+#halstudios-explain {
+    color: #f5f2e8;
+    font-size: 1.4rem;
+    padding-top: 10px;
+}
+#hal-shoes2 {
+    width: 50%;
+    padding-top: 33%;
+    padding-left: 25%;  
+    transition: opacity 1s ease-in; 
+    opacity: 0;
+    z-index: 1;
+}
+/* 아식스 x 스니커즈 폴리틱스 */
+#sneakers-politics {
+    height: 800px;
+}
+#sneakers-politics-title {
+    display: flex;
+    flex-direction: column;
+    padding-left: 50px;
+}
+.sp-explain {
+    width: 100%;
+    height: 25px;
+    font-size: 1.3rem;
+}
+.sp-title {
+    height: 70px;
+    font-size: 3.7rem;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+.sp-title > p {
+    opacity: 0;
+    transition: opacity 3s ease;
+}
+.line {
+    display: block;
+    position: absolute;
+    margin-top: 20px;
+    right: 0;
+    width: 0;
+    height: 3px;
+    background-color: #000;
+    transition: all 2s ease-in-out;
+}
+.line.line-animation {
+    width: 850px;
+}
+#list {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+#sp-itemlist > ul, #sp-itemlist2 > ul {
+    display: flex;
+    align-items: center;
+    height: 370px;
+    margin-left: 60px;
+}
+#sp-itemlist > ul > li, #sp-itemlist2 > ul > li {
+    width: 320px;
+    height: 320px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+    position: relative;
+    margin-left: 30px;
+    cursor: pointer;
+}
+#sp-itemlist > ul > li > img, #sp-itemlist2 > ul > li > img {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.nextButton {
+    position: absolute; 
+    top: 38%;
+    right: 30px;
+    transform: translateX(-38%);
+    border: none;
+    background-color: transparent;
+    font-size: 5rem;
+    color: #000;
+}
+/* 아식스 x 제이제이제이자운드 */
+#jjjjound {
+    height: 1000px;
+    background: url("../images/jjjjound-bg.png") no-repeat center;
+    background-size: cover;
+    margin-top: 100px;
+    display: flex;
+}
+#jjj-shoes1 {
+    width: 20%;
+}
+@keyframes slideInFromright {
+    0% {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+.slide-animation2 {
+    animation: slideInFromright 1s ease forwards;
+}
+#jjjjound-model {
+    display: flex;
+    align-items: center;
+    width: 50%;
+    position: relative;
+}
+#jjj-model1 {
+    z-index: 2;
+    padding-top: 23%;
+    transform: translateX(-5%);
+}
+#jjj-model2 {
+    z-index: 1;
+    transform: translateX(-50%);
+    padding-top: 25%;
+}
+.jjj-asics_logo {
+    display: flex;
+    align-items: center;
+}
+.jjj-asics_logo > p{
+    font-size: 3.3rem;
+    font-weight: 800;
+}
+#jjjjound-logo {
+    z-index: 3;
+    position: absolute;
+    top: 50%;
+    left: 10%;
+}
+.jjjjound-logo {
+    display: flex;
+    flex-direction: column;
+    padding-left: 50px;
+}
+.jjjjound-logo > span {
+    font-size: 0.85rem;
+    font-weight: 600;
+    padding-left: 22px;
+    color: #2a241e;
+}
+.jjj-asics_logo > img {
+    padding-right: 50px;
+}
+.about-btn {
+    display: flex;
+    flex-direction: column;
+}
+.about-btn > button {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    margin-left: 10px;
+    width: 80px;
+    height: 30px;
+    background-color: #2a241e;
+    color: #fff;
+    font-size: 0.9rem;
+    border-radius: 10px;
+}
+.about-btn > button > p {
+    font-size: 1.1rem;
+    padding-left: 2px;
+}
+.zoom-icon {
+    position: relative; width: 30px; height: 30px;
+    border-radius: 50%; cursor: pointer;
+}
+.magnifying-glass {
+    position: absolute; top: 50%; left: 50%;
+    width: 8px; height: 8px; transform: translate(-50%, -50%);
+    border: 2.5px solid #f5f2e8; border-radius: 50%; position: relative;
+}
+.handle {
+    position: absolute; top: 75%; left: 85%;
+    width: 9px; height: 3px; background-color: #f5f2e8;
+    transform: translate(-10%, 50%) rotate(45deg);
+}
+.magnifying-glass::before {
+    content: ''; display: block;
+    width: 6px; height: 6px;
+    position: absolute; top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+}
+.about-btn > p {
+    padding: 30px;
+    margin-left: 10px;
+    background-color: rgba(245, 242, 232, 0.6);
+    font-size: 1.1rem;
+    line-height: 25px;  
+    border-radius: 10px;
+    white-space: nowrap;
+    position: relative;
+}
+.about-btn > p > button {
+    position: absolute; 
+    top: 5px;
+    right: 10px;
+    font-size: 2.1rem;
+    color: #2a241e;
+    border: none;
+    background-color: transparent;
+}
+#jjj-shoes2 {
+    width: 30%;
+    position: relative;
+}
+#jjj-shoes2 > ul > li {
+    display: flex;
+    align-items: center;
+}
+.circle1 {
+    width: 20px;
+    height: 20px;
+    background-color: #dbd7d5;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.circle2 {
+    width: 20px;
+    height: 20px;
+    background-color: #9a9792;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 50%;
+    margin-right: 10px;
+}
+#jjj-shoes2 > ul > li > p {
+    font-size: 1.2rem;
+    color: #2a241e;
+}
+#jjj-shoes3 {
+    position: absolute; 
+    top: 50%;
+    right: 0;
+}
+@keyframes slideInFromleft {
+    0% {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+.slide-animation3 {
+    animation: slideInFromleft 2s ease forwards;
+}
+/* 아식스 x 어퓨 젤라이트3, 아식스 x I4p */
+/* afew-gel-lyte */
+#afew-i4p {
+    height: 2250px;
+    background: url('../images/afew-i4p-bg.png') no-repeat center;
+    background-size: cover;
+}
+#gel-lyte {
+    height: 36%;
+    margin-top: 350px;
+    position: relative;
+}
+#afew-shoes {
+    position: absolute;
+    top: 35%;
+    right: -80px;
+}
+.line3 {
+    display: block;
+    width: 0;
+    height: 3px;
+    background-color: #fff;
+    transition: all 1.5s ease-in-out;
+}
+.line3.line-animation3 {
+    width: 400px;
+}
+#afew-title {
+    padding-top: 15px;
+    padding-left: 50px;
+    display: flex;
+    align-items: top;
+}
+#afew-title > p {
+    font-size: 2rem;
+    color: #fff;
+    padding-left: 15px;
+    padding-right: 10px;
+}
+#afew-title-explain > p {
+    font-size: 1.3rem;
+    color: #fff;
+    line-height: 50px;
+    padding-left: 70px;
+    position: fixed;
+    color: transparent;
+    position: relative;
+}
+#afew-title-explain > p::before {
+    content: "‘아식스 x 어퓨 젤-라이트3’ 는 투박하면서도 조용한 와비사비(Wabi-Sabi)의 철학에서 영감을 받아 ‘아름다움은 불완전함에 있음’을 구현하고자 하였습니다.";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 50px;
+    overflow: hidden;
+    color: #fff;
+    overflow: hidden;
+    border-right: 1px solid transparent;
+}
+.typing {
+    animation: typing 5s ease;
+}
+@keyframes typing{
+    0% {
+      width: 0%;
+    }
+    100% {
+      width: 100%;
+    }
+}
+/* #afew-video {
+    position: relative;
+} */
+#afew-video > video {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 5;
+}
+/* i4p */
+#i4p {
+    height: 64%;
+    display: flex;
+}
+#i4p-model1 {
+    width: 13%;
+    height: 750px;
+    padding-left: 8%;
+    opacity: 0;
+    transition: opacity 1s ease-in; 
+    z-index: 2;
+}
+#i4p-title-explain {
+    padding-left: 8%;
+    width: 43%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 5;
+}
+#i4p-title {
+    height: 130px;
+    white-space: nowrap;
+    padding-top: 70%;
+    opacity: 0;
+    font-size: 7rem;
+    font-family: "Noto Serif KR", serif;
+    font-weight: 900;
+    color: #000;
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.5);
+    text-shadow: 5px 5px 3px rgba(255, 255, 255, 0.5);
+    transition: font-size 1s ease-in-out;
+}
+#i4p-title.large {
+    font-size: 9rem;
+    opacity: 1;
+}
+#i4p-explain {
+    padding-left: 35px;
+    padding-top: 60px;
+    font-size: 1.15rem;
+    line-height: 37px;
+    color: rgba(255, 255, 255, 0.7);
+    font-weight: 100;
+    white-space: nowrap;
+}
+#i4p-model2 {
+    padding-top: 35%;
+    width: 47%;
+    height: 700px;
+    opacity: 0;
+    transition: opacity 1s ease-in; 
+}
+/* asics x vivienne westwood */
+#vivienne {
+    margin-top: 150px;
+    height: 1100px;
+    background: url("../images/vivienwestwood-bg.png") no-repeat center;
+    background-size: cover;
+    position: relative;
+}
+#vivienne-asics-logo {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+}
+#vivienne-logo, #asics-logo {
+    opacity: 0;
+    transition: opacity 2s ease;
+}
+#vivienne-asics-logo > p {
+    font-size: 4rem;
+    font-weight: 700;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.unlock-button {
+    margin-top: 110px;
+    margin-left: 25px;
+    position: relative;
+    overflow: hidden;
+    padding-left: 20px;
+    width: 90px;
+    height: 30px;
+    border-radius: 30px;
+    background-color: rgba(0, 0, 0, 0.1);
+    box-shadow: inset -2px -3px 3px rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 14px;
+    color: rgba(0,0,0,0.5);
+}
+.slide-circle {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translate(0%, -50%);
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #000;
+    transition: left 0.5s ease;
+}
+#vivi-explain {
+    display: none;
+    position: absolute;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    top: 180px;
+    right: -75px;
+    font-size: 1.1rem;
+    line-height: 20px;
+}
+/* 아식스 x 누레이블 */
+#nulabel {
+    height: 1250px;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    white-space: nowrap;
+}
+#nulabel-title {
+    margin-left: 70px;
+    display: flex;
+    align-items: center;
+}
+#nulabel-title > p {
+    font-size: 3rem;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.nulabel-logo {
+    padding-top: 12px;
+}
+#nulabel-contents1 {
+    display: flex;
+    height: 40%;
+    padding-top: 70px;
+}
+#nulabel-img {
+    position: relative;
+    padding-left: 150px;
+}
+.nulabel-shoes1 {
+    position: absolute;
+    top: 60%;
+    right: -150px;
+    opacity: 0;
+    transition: opacity 1s ease-in; 
+}
+#nulabel-contents1 > p {
+    padding-top: 100px;
+    padding-left: 50px;
+    font-size: 1.4rem;
+    line-height: 40px;
+    text-align: center;
+    position: relative;
+}
+.nulabel-shoes2 {
+    position: absolute;
+    top: -60px;
+    right: 70px;
+    opacity: 0;
+    transition: opacity 1s ease-in; 
+}
+#nulabel-contents2 {
+    display: flex;
+    height: 60%;
+}
+#nulabel-contents2 > p {
+    padding-left: 50px;
+    padding-top: 200px;
+    font-size: 1.4rem;
+    line-height: 40px;
+    text-align: center;
+}
+#nulabel-img2 {
+    padding-left: 50px;
+}
+
+/* 푸터 영역 */
+#footer {
+    margin-top: 100px;
+    height: 450px;
+    white-space: nowrap;
+}
+#footer-wrap {
+    padding: 50px;
+    display: flex;
+    font-size: 1.3rem;
+    line-height: 35px;
+    color: #0d3273;
+}
+#footer-wrap a {
+    color: #0d3273;
+}
+.menu-list {
+    padding-left: 70px;
+}
+#footer-copyright {
+    width: 95%;
+    margin-left: 2.5%;
+    border-top: 2px solid #0d3273;
+}
+#ft-info {
+    display: flex;
+    flex-direction: column;
+    padding-left: 150px;
+    line-height: 30px;
+}
+.info-list {
+    display: flex;
+}
+.info-list > li {
+    margin-right: 20px;
+    border-bottom: 2px solid #0d3273;
+}
+.info-list {
+    margin-bottom: 10px;
+}
+.info-list > span {
+    border-bottom: 2px solid #0d3273;
+    margin-right: 20px;
+}
+#footer-copyright > .copy {
+    padding-top: 5px;
+    height: 70px;
+}
+#footer-copyright > .copy > li {
+    display: inline-block;
+    font-size: 1.3rem;
+    margin-top: 12px;
+    padding: 0 5px 0 10px;
+    background: url(../images/nav_line.png) no-repeat left center;
+    background-size: 2px 20px;
+    color: #0d3273;
+    line-height: 1;
+}
+#footer-copyright > .copy > .first {
+    background: none;
+}
